Reworking logged in home page to be less crappy (still not great) Added new state to nav such that keeps your current section highlighted Reworded commit buttons to fit on a single line in the narrower column Eradicating left_column block Cleaned up 403 and 404 pages

--- a/actions/templates/actions/action_detail.html
+++ b/actions/templates/actions/action_detail.html
@@ -1,9 +1,5 @@
-{% extends "rah/base.html" %}
+{% extends "actions/base.html" %}
 {% load comments %}
-
-{% block left_sidebar %}
-
-{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     <a href="{% url action_show %}">Actions</a> &rsaquo;
