--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -3,6 +3,7 @@
 {% block title %}
     Welcome
 {% endblock %}
+{% block rah_nav_select %}nav_home{% endblock %}
 {% block right_content %}
 <div class="box_three_top"></div>
 <div class="box_three_middle" id="logged_out_call_to_action">
