--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,7 +20,7 @@
         		<p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
         	</form>
         	<p>
-    	        <a href="{% url rah.views.register %}">Sign up</a><br/>
+    	        Don't have an account? <a href="{% url rah.views.register %}">Sign up</a><br/>
     	        <a href="{% url password_reset %}">Recover password</a>
     	        
     	    </p>
