--- a/groups/templates/groups/group_disc_list.html
+++ b/groups/templates/groups/group_disc_list.html
@@ -1,4 +1,4 @@
-{% extends "rah/base.html" %}
+{% extends "groups/base.html" %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     <a href="{% url group_list %}">Teams</a> &rsaquo;
