--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "groups/base.html" %}
 {% block breadcrumbs %}
 <a href="{% url index %}">Home</a> &rsaquo;
 Teams
