--- a/templates/403.html
+++ b/templates/403.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
-{% block content %}
-    <p>{{ message }}
+{% block right_content %}
+<div class="box_two_top"></div>
+<div class="box_two_middle">
+    <p>{{ message }}</p>
+</div>
+<div class="box_two_bottom"></div>
 {% endblock %}
