--- a/templates/404.html
+++ b/templates/404.html
@@ -2,8 +2,11 @@
 
 {% block title %}Page not found{% endblock %}
 
-{% block content %}
-<h1>Page not found</h1>
-
-<p>Sorry, but the requested page could not be found.</p>
+{% block right_content %}
+<div class="box_two_top"></div>
+<div class="box_two_middle">
+    <h1>Page not found</h1>
+    <p>Sorry, but the requested page could not be found.</p>
+</div>
+<div class="box_two_bottom"></div>
 {% endblock %}
