--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -1,66 +1,104 @@
 {% extends "rah/base.html" %}
 {% load record %}
 {% load dated_static %}
-{% block left_sidebar %}
-    {% if commitment_list %}
-        <h2>Commitments</h2>
-        <p>
-        {% for row in commitment_list %}
-            <a href="{% url action_detail row.action.slug %}">{{row.action.name}}</a> by {{row.date_committed|date}}<br/>
-        {% endfor %}
-        </p>
-    {% endif %}
-    {% if not is_others_profile %}
-        {% include 'rah/_magnify.html' %}
-    {% endif %}
-    {% if my_groups or my_geo_groups %}
-        <h2>Teams</h2>
-        <p>
-        {% for group in my_groups %}
-            <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
-        {% endfor %}
-        {% for group in my_geo_groups %}
-            <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
-        {% endfor %}
-        </p>
-    {% endif %}
-    {% if completed %}
-        <h2>Completed Actions</h2>
-        <p>
-        {% for action in completed %}
-            <a href="{% url action_detail action.slug %}">{{action.name}}</a> (+{{action.points}} points)<br/>
-        {% endfor %}
-        </p>
-    {% endif %}
-    {% if records %}
-        <h2>Recent Activity</h2>
-        {% for rec in records %}
-            {% render_record rec %}
-        {% endfor %}
-    {% endif %}
-{% endblock %}
+{% block rah_nav_select %}nav_home{% endblock %}
 {% block right_content %}
-	<a href="{% url action_detail 'eliminate-standby-vampire-power' %}">
-		<img src="{% dated_static 'images/actions/eliminate-standby-vampire-power/featured.png' %}" width="740" height="402"/>
-	</a>
-	<div class="clear"></div>
-	<div class="grid_2 alpha">
-	    {% if in_progress %}
-	        <div class="actions_block" id="actions_in_progress">
-	            <h2>In Progress Actions</h2>
-	            {% for action in in_progress %}
-	                {% include 'actions/_action_nugget.html' %}
-	            {% endfor %}
-	        </div>
-	    {% endif %}
-	    {% if recommended %}
-	        <div class="actions_block" id="actions_recommended">
-	            <h2>Recommended Actions</h2>
-	            {% for action in recommended %}
-	                {% include 'actions/_action_nugget.html' %}
-	            {% endfor %}
-	        </div>
-	    {% endif %}
+	<div class="grid_6 alpha">
+	    {% if featured_actions %}
+	    <div class="box_two_top"></div>
+        <div class="box_two_middle">
+            <h1>Featured Actions</h1>
+            <div class="action_nugget_wrapper_tw">
+                {% for action in featured_actions %}
+                <div class="action_nugget home_page_action_nugget" style="margin-left:0px; {% if forloop.first %}margin-right:27px;{% endif %} width:189px">
+                    {% if action.completed %}
+                        <div class="action_nugget_status green">Completed</div>
+                    {% else %}
+                        {% if action.committed %}
+                            <div class="action_nugget_status red">Due {{action.committed|date:"N jS"}}</div>
+                        {% else %}
+                            {% if user.is_authenticated %}
+                                <div class="action_nugget_status blue_light">Not Started</div>
+                            {% endif %}
+                        {% endif %}
+                    {% endif %}
+
+                    <div class="action_nugget_points">{{ action.points }} Points</div>
+                    {% if action.has_illustration %}
+                        <a href="{% url action_detail action.slug %}">
+                    	    <img src="{{ action.get_nugget_illustration }}" alt="{{action.name}} illustration" height="48" width="189"/>
+                    	</a>
+                    {% endif %}	
+                    <h3 class="action_nugget_title"><a class="blue" href="{% url action_detail action.slug %}">{{ action.name }}</a></h3>
+                    <div class="action_nugget_teaser">{{ action.teaser|safe|linebreaks }}</div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="box_two_bottom"></div>
+        {% endif %}
+        
+	    {% if records %}
+            <div class="box_two_top"></div>
+            <div class="box_two_middle">
+                <h2>Your Recent Activity</h2>
+                {% for rec in records %}
+                    {% render_record rec %}
+                {% endfor %}
+            </div>
+            <div class="box_two_bottom"></div>
+        {% endif %}
+        
+	</div>
+	<div class="grid_3 omega">
+	    {% if commitment_list %}
+        <div class="box_one_top"></div>
+        <div class="box_one_middle">
+            <h3>Commitments</h3>
+            {% for row in commitment_list %}
+            <p>
+                <a href="{% url action_detail row.action.slug %}">{{row.action.name}}</a><br/>
+                <span class="smaller">Due by {{row.date_committed|date}}</span>
+            </p>
+            {% endfor %}
+        </div>
+        <div class="box_one_bottom"></div>
+        {% endif %}
+	    
+	    {% if not is_others_profile %}
+            {% include 'rah/_magnify.html' %}
+        {% endif %}
+        
+        {% if my_groups or my_geo_groups %}
+        <div class="box_one_top"></div>
+        <div class="box_one_middle">
+            <h3>Your Teams</h3>
+            <p>
+            {% for group in my_groups %}
+                <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
+            {% endfor %}
+            {% for group in my_geo_groups %}
+                <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
+            {% endfor %}
+            </p>
+        </div>
+        <div class="box_one_bottom"></div>
+        {% endif %}
+        
+        {% if completed %}
+        <div class="box_one_top"></div>
+        <div class="box_one_middle">
+            <h3>Completed Actions</h3>
+            {% for action in completed %}
+                <p>
+                    <a href="{% url action_detail action.slug %}">{{action.name}}</a><br/>
+                     <span class="smaller">{{action.points}} points</span>
+                </p>
+            {% endfor %}
+        </div>
+        <div class="box_one_bottom"></div>
+        {% endif %}
+        
 	</div>
 {% endblock %}
 {% block js %}page_profile{% endblock %}
