Tweaks to search results

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,8 @@
 					</a>
                     <form action="/search" id="cse_search_box_form">
                         <div>
-                            <input type="hidden" name="cx" value="004464471324017850671:spsjawaq-zy" />
-                            <input type="hidden" name="cof" value="FORID:10" />
+                            <input type="hidden" name="cx" value="018322562804099680750:4l5wfmovb4q" />
+                            <input type="hidden" name="cof" value="FORID:11" />
                             <input type="hidden" name="ie" value="UTF-8" />
                             <span class="overset">
                                 <label class="hidden" for="cse_search_box">Search</label>
