fixed bullet points in registration email

--- a/templates/rah/registration_email.html
+++ b/templates/rah/registration_email.html
@@ -18,12 +18,12 @@
             finding a group</a>.</li> 
         <li>Are you the first to arrive at the party? 
             <a href="http://{{ domain }}{% url group_create %}">Start a group</a> for your 
-            neighborhood, school,<br />
-            church, or knitting club. Then, organize your group to take action together.</li> 
+            neighborhood, school, church, or knitting club. Then, organize your group to take 
+            action together.</li> 
         <li>Spread the word! <a href="http://{{ domain }}{% url index %}">Tweet it out</a>, 
             <a href="http://{{ domain }}{% url index %}">invite friends</a>, send some smoke 
-            signals, whatever. Let <br />
-            everyone know about all the good you’re doing, and how they can join in on the fun.</li>
+            signals, whatever. Let everyone know about all the good you’re doing, and how they 
+            can join in on the fun.</li>
 </p>
 <p>
     As you cruise around the site, let us know what you think by dropping us a line at feedback@repowerathome.com.
