--- a/groups/templates/groups/group_membership_response.html
+++ b/groups/templates/groups/group_membership_response.html
@@ -1,13 +1,13 @@
 {% if approved %}
     <p>
         Hi {{ user.first_name }},<br />
-        You’re in! The group administrator just approved your access to {{ group }}.
+        You’re in! The team administrator just approved your access to {{ group }}.
     </p>
     <p>
         Click here to go to <a href="http://{{ domain }}{{ group.get_absolute_url }}">{{ group }}</a>
     </p>
     <p>
-        On the group page, you can see what your fellow members are doing and how you <br />
+        On the team page, you can see what your fellow members are doing and how you <br />
         stack up. That means now is the time to get your upgrade on! If you’ve already <br />
         checked off the <a href="http://{{ domain }}{% url index %}">featured action</a>, 
         browse the <a href="http://{{ domain }}{% url action_show %}">action library</a> to find 
@@ -21,17 +21,17 @@
 {% else %}
     <p>
         Hi {{ user.first_name }},<br />
-        A group administrator turned down your request to join {{ group }}. But <br />
-        no worries! There are tons of groups on Repower at Home, including the one that’s <br />
+        A team administrator turned down your request to join {{ group }}. But <br />
+        no worries! There are tons of teams on Repower at Home, including the one that’s <br />
         perfect for you.
     </p>
     <p>
-        <a href="http://{{ domain }}{% url group_list %}">Click here to find more groups</a><br />
+        <a href="http://{{ domain }}{% url group_list %}">Click here to find more teams</a><br />
         <a href="http://{{ domain }}{% url group_create %}">Click here to create your own</a>
     </p>
     <p>
-        Remember, only closed groups need administrator approval. You can join any  <br />
-        of the open groups at anytime.
+        Remember, only closed teams need administrator approval. You can join any  <br />
+        of the open teams at anytime.
     </p>
     <p>
         Cheers,<br />
