--- a/templates/invite/groups/invite.html
+++ b/templates/invite/groups/invite.html
@@ -12,9 +12,9 @@
     </p>
 {% endif %}
 <p>
-    {{ invite.content_object }} is a Repower at Home group. Repower at Home groups help members<br />
-    save energy, see what their friends are doing, organize their communities, and save the <br />
-    world through the magic of energy efficiency. Link up today – it’s free!
+    {{ invite.content_object }} is a Repower at Home team. Repower at Home teams help<br />
+    members get organized, connect with friends, and save the world through the magic of<br /> 
+    energy efficiency. Link up today – it’s free
 </p>
 <p>
     <a href="https://{{ domain }}{% url register %}">Join now</a>
