--- a/flagged/templates/flagged/email.html
+++ b/flagged/templates/flagged/email.html
@@ -1,3 +1,3 @@
-{{ flag }}, you should go check it out.
+{{ flag|safe|linebreaks }}, you should go check it out.
 
 http://{{ domain }}{{ flag.content_object.get_absolute_url }}
