--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -4,7 +4,7 @@
     <h3>Magnify Your Impact</h3>
     <p>
         {% activity_by_slug mag_request_party_host_info as house_party_act %}
-        <a href='{% url house_party %}' id='house_party_link'>Host a house party</a><br/>
+        <a href='{% url house_party %}' id='house_party_link'> Learn about hosting an energy meeting in your community</a><br/>
         <span class="smaller">{{ house_party_act.points }} points</span>
     </p>
     <p>
