--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,11 @@
 						<img src="{% dated_static 'images/theme/logo.png' %}" alt="Repower at Home logo" width="259" height="38"/>
 					</a>
                     <form action="/search" id="cse_search_box_form">
-                        <div>
+                        <div class="overset">
                             <input type="hidden" name="cx" value="018322562804099680750:4l5wfmovb4q" />
                             <input type="hidden" name="cof" value="FORID:11" />
                             <input type="hidden" name="ie" value="UTF-8" />
-                            <span class="overset">
+                            <span class="">
                                 <label class="hidden" for="cse_search_box">Search</label>
                                 <input type="text" name="q" size="31" id="cse_search_box"/>
                             </span>
