--- a/static/css/style.css
+++ b/static/css/style.css
@@ -375,7 +375,7 @@ Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups Gro
 #group_slug_domain {
     font-family: helvetica;
     font-size: 12px;
-    color: #C1C1C1;
+    color: #333;
     position: absolute;
     top: 31px;
     left: 0; }
