Moved activity_by_slug template tag to records app (fixed import error that was only happening on Jon's dev environment) Incrementing css images

--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -1,4 +1,5 @@
 {% load invites %}
+{% load record %}
 <div class="box_one_top"></div>
 <div class="box_one_middle">
     <h3>Magnify Your Impact</h3>
