adding size to graph image

--- a/templates/rah/_tongue.html
+++ b/templates/rah/_tongue.html
@@ -29,7 +29,7 @@
             <a class="chart_link" href="{% url records_chart profile.user.id %}">Activity</a>
             <div>
                 <a href="{% url records_chart profile.user.id %}" id="chart_dialog_link" class="chart_link" title="View progress chart">
-                    <img src="{% dated_static 'images/theme/tongue_graph.gif' %}" alt="graph"/>
+                    <img src="{% dated_static 'images/theme/tongue_graph.gif' %}" alt="graph" width="182" height="51"/>
                 </a>
             </div>
         </div>
