--- a/events/templates/events/commitments.html
+++ b/events/templates/events/commitments.html
@@ -9,27 +9,7 @@
             <h3>Total Actions Committed: 0</h3>
             <h3>Total Actions Already Done: 0</h3>
             <form action="" method="post">
-                {% for form in forms %}
-                    {{ form.errors }}
-                {% endfor %}
-                <table>
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th>Will Do</th>
-                            <th>Already Done</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for form in forms %}
-                            <tr>
-                                <td>{{ form.instance.challenge }}{{ form.challenge }}</td>
-                                <td>{{ form.pledge }}</td>
-                                <td>{{ form.done }}</td>
-                            <tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                {{ form.as_ul }}
                 {% csrf_token %}
                 <input type="submit" value="Save" />
             </form>
