--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,10 +51,10 @@ h1, h1 a {
     font-style: normal; 
     color: #ed6623;}
 h2, h3, h4, h5, h6 { font-weight:bold; color: #172950;}
-h1 { font-size: 30px; line-height:45px; }
-h2 { font-size: 20px; line-height:27px; }
-h3 { font-size: 18px; line-height:24px; }
-h4 { font-size: 16px; line-height:21px; }
+h1 { font-size: 30px; line-height:45px; margin-bottom:9px;}
+h2 { font-size: 24px; line-height:27px; margin-bottom:9px; }
+h3 { font-size: 16px; margin-bottom:9px; }
+h4 { font-size: 14px; color: #333333; }
 h5 { font-size: 14px; }
 h6 { font-size: 12px; }
 cite {display:none;}
@@ -72,9 +72,9 @@ strong, b { font-weight:bold; }
 em, i { font-style: italic; }
 ol { list-style: decimal; }
 ul{
-    margin-left: 10px;
-    padding-left: 10px;
-    padding-bottom: 18px;}
+    margin-left: 18px;
+    padding-left: 18px;
+    margin-bottom: 18px;}
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms Forms 
