--- a/actions/templates/actions/_action_nugget.html
+++ b/actions/templates/actions/_action_nugget.html
@@ -24,7 +24,7 @@
             </a>
         {% endif %}    
     
-        <h3 class="action_nugget_title"><a class="blue" href="{% url action_detail action.slug %}">{{ action.name }}</a></h3>
+        <div class="action_nugget_title"><a class="blue" href="{% url action_detail action.slug %}">{{ action.name }}</a></div>
         <div class="action_nugget_teaser">{{ action.teaser|safe|linebreaks }}</div>
     </div>
     <div class="box_one_bottom"></div>
