--- a/static/css/style.css
+++ b/static/css/style.css
@@ -315,7 +315,7 @@ Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions 
 .action_nugget_status { float:left; font-weight:bold;}
 .action_nugget_points { text-align:right; font-weight: bold;}
 .action_nugget img {  margin-top:3px;}
-.action_nugget_title {max-height:48px; overflow:hidden;}
+.action_nugget_title {max-height:48px; overflow:hidden; font-weight:bold; color: #172950; font-size:18px; line-height:24px;}
 .action_nugget_teaser {max-height:54px; overflow:hidden;}
 .action_nugget_wrapper_three { width:729px;}
 .action_nugget_wrapper_two { width:486px;}
